HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldVisibilityViolation/Expected.uv
//! Expected diagnostic metadata for the RecordFieldVisibilityViolation rejected-source specimen.

expectedDiagnostic("E-TYP-1906", "FieldVisOk-Err")
